--- a/Tugas Formulir_182410101001_Dandy Satrio W/form.css
+++ b/Tugas Formulir_182410101001_Dandy Satrio W/form.css
@@ -6,6 +6,7 @@ h1{
   color: #B50024;
   font-size: 36pt;
   margin-bottom: -80px;
+  font-family: "ethnocentric"
 }
 
 body {
@@ -23,9 +24,8 @@ body {
      width: 400px;
      padding: 10px;
      border: 1px;
-     background: #8E8E8E;
+     background: rgba(142, 142, 142, 0.8);
      border-radius: 5px;
-     opacity: 0.9;
  }
 
  input[name="firstname"], input[name="lastname"], input[type=password]{
