--- a/Index gambar dan css/register.css
+++ b/Index gambar dan css/register.css
@@ -77,21 +77,21 @@ body {
   .registlogin a{
     color: white;
 }
-#message {
+#validation {
   display:none;
-  background: #f1f1f1;
+  background: rgba(0,0,0,0);
   color: #000;
   position: relative;
   padding: 20px;
-  margin-top: 10px;
+  margin-top: -250px;
+  margin-left: 300px
 }
 
-#message p {
+#validation li {
   padding: 10px 35px;
   font-size: 18px;
 }
 
-/* Add a green text color and a checkmark when the requirements are right */
 .valid {
   color: green;
 }
@@ -99,10 +99,8 @@ body {
 .valid:before {
   position: relative;
   left: -35px;
-  content: "✔";
 }
 
-/* Add a red text color and an "x" when the requirements are wrong */
 .invalid {
   color: red;
 }
@@ -110,5 +108,4 @@ body {
 .invalid:before {
   position: relative;
   left: -35px;
-  content: "✖";
 }
