--- a/Index gambar dan css/css.css
+++ b/Index gambar dan css/css.css
@@ -17,7 +17,7 @@ div.headerBox{
   height: 90px;
   margin-top: none;
   background: #DBDBDB;
-  position: relative;
+  position: fixed;
 }
 img.headerKiri{
   margin-left: 5%;
@@ -38,7 +38,7 @@ img.headerKanan{
 img.headerGambar{
   margin-top: 0%;
   width: 100%;
-  height: 500px;
+  height: 550px;
 }
 img.view {
   margin-left: 25%;
@@ -52,7 +52,7 @@ img.love{
   margin-top: -3%;
 }
 img.share{
-  position: absolute;
+
   margin-left: 15%;
   width: 3%;
   height: 6%;
@@ -70,6 +70,21 @@ p.tulisanshare{
   margin-left: 63%;
   margin-top: -2.8%;
 }
+h3.judulwisata{
+  font-family: Raleway;
+  font-size: 2vw;
+  color: black;
+  text-align: center;
+  margin-top: 3%;
+}
+h3.judulartikel{
+  font-family: Raleway1;
+  font-size: 3vw;
+  color: black;
+  text-align: left;
+  margin-left: 5%;
+  margin-top: 3%;
+}
 h3{
   font-family: Raleway;
   font-size: 2vw;
@@ -86,17 +101,17 @@ p{
   margin-right: 5%;
   color: black;
 }
-div.gambarIjen{
+div.gambarWisata{
   margin-top: 5%;
 }
-img.ijen1{
+img.wisata1{
   width: 26%;
   height: 30%;
   margin-left: 20%;
   border-radius: 4%;
 }
-img.ijen2{
-  width: 30.8%;
+img.wisata2{
+  width: 26%;
   height: 30%;
   margin-left: 5%;
   border-radius: 4%;
@@ -110,8 +125,17 @@ h4{
   font-family: Raleway2;
   font-size: 2vw;
 }
+h4.keteranganjudul{
+  color: #878787;
+  text-align: left;
+  margin-left: 5%;
+  margin-top: -3%;
+  font-family: Raleway1;
+  font-size: 1.5vw;
+}
 div.saran{
   margin-left: -2%;
+  margin-bottom: 23%;
 }
 img.saran1{
   position: absolute;
@@ -137,6 +161,66 @@ img.saran3{
   margin-left: 70%;
   margin-top: 0%;
 }
+img.saran1baluran{
+  position: absolute;
+  border-radius: 4%;
+  width: 26%;
+  height: 33%;
+  margin-left: 10%;
+  margin-top: -20%;
+}
+img.saran2baluran{
+  position: absolute;
+  border-radius: 4%;
+  width: 26%;
+  height: 33%;
+  margin-left: 40%;
+  margin-top: -20%;
+}
+img.saran3baluran{
+  position: absolute;
+  border-radius: 4%;
+  width: 26%;
+  height: 33%;
+  margin-left: 70%;
+  margin-top: -20%;
+}
+p.textsaran1baluran {
+  color: white;
+  font-family: "Raleway";
+  text-align:left;
+  float: left;
+  position: absolute;
+  width: 25%;
+  top: 230%;
+  left :5%;
+  font-size:1.5vw;
+  text-indent: inherit;
+}
+p.textsaran2baluran{
+  color: white;
+  font-family: "Raleway";
+  text-align:left;
+  float: left;
+  position: absolute;
+  width: 25%;
+  top: 230%;
+  left :35%;
+  font-size:1.5vw;
+  text-indent: inherit;
+}
+p.textsaran3baluran{
+  color: white;
+  font-family: "Raleway";
+  text-align:left;
+  float: left;
+  position: absolute;
+  width: 25%;
+  top: 230%;
+  left :65%;
+  font-size:1.5vw;
+  text-indent: inherit;
+}
 p.textsaran1 {
   color: white;
   font-family: "Raleway";
@@ -144,9 +228,9 @@ p.textsaran1 {
   float: left;
   position: absolute;
   width: 25%;
-  top: 220%;
-  left :4%;
-  font-size:90%;
+  top: 215%;
+  left :5%;
+  font-size:1.5vw;
   text-indent: inherit;
 }
 p.textsaran2{
@@ -156,9 +240,9 @@ p.textsaran2{
   float: left;
   position: absolute;
   width: 25%;
-  top: 220%;
-  left :34%;
-  font-size:90%;
+  top: 215%;
+  left :35%;
+  font-size:1.5vw;
   text-indent: inherit;
 }
 p.textsaran3{
@@ -168,15 +252,51 @@ p.textsaran3{
   float: left;
   position: absolute;
   width: 25%;
-  top: 220%;
-  left :64%;
-  font-size:90%;
+  top: 215%;
+  left :65%;
+  font-size:1.5vw;
+  text-indent: inherit;
+}
+p.textsaran1artikel {
+  color: white;
+  font-family: "Raleway";
+  text-align:left;
+  float: left;
+  position: absolute;
+  width: 25%;
+  top: 200%;
+  left :5%;
+  font-size:1.5vw;
+  text-indent: inherit;
+}
+p.textsaran2artikel{
+  color: white;
+  font-family: "Raleway";
+  text-align:left;
+  float: left;
+  position: absolute;
+  width: 25%;
+  top: 200%;
+  left :35%;
+  font-size:1.5vw;
+  text-indent: inherit;
+}
+p.textsaran3artikel{
+  color: white;
+  font-family: "Raleway";
+  text-align:left;
+  float: left;
+  position: absolute;
+  width: 25%;
+  top: 200%;
+  left :65%;
+  font-size:1.5vw;
   text-indent: inherit;
 }
 input.tambahwisata{
   width: 11%;
   height: 45px;
-  margin-top: 20%;
+  margin-top: 2%;
   margin-left: 12%;
   background-color: #878787;
   font-family: Raleway1;
@@ -184,97 +304,70 @@ input.tambahwisata{
   color: white;
   border-style: solid;
   border-radius: 100px;
+  border:none;
 }
 input.tambahwisata:hover{
-  background: #50CCB3;
+  background:#50CCB3;
 }
 div.footertop{
-  background-color:#878787;
+  background-color:#50CCB3;
   margin-top: 4%;
-  height: 115px;
+  height: 60px;
 }
 img.footer{
   width: 100%;
   height: 50px;
 }
-p.syaratdanketentuan{
-  color: white;
-  font-family: "Raleway";
-  float: left;
-  position: absolute;
-  width: 20%;
-  top:260%;
-  left :-2%;
-  font-size:90%;
-  text-align: inherit;
-}
-p.privasi{
-  color: white;
-  font-family: "Raleway";
-  float: right;
-  position: absolute;
-  width: 352px;
-  top:260%;
-  left :11%;
-  font-size:90%;
-  text-align: inherit;
-}
-p.hubungikami{
-  color: white;
-  font-family: "Raleway";
-  float: none;
-  position: absolute;
-  width: 20%;
-  top:260%;
-  left :24%;
-  font-size:90%;
-  text-align: inherit;
-}
-p.faq{
-  color: white;
-  font-family: "Raleway";
-  float: none;
-  position: absolute;
-  width:20%;
-  top:260%;
-  left :33%;
-  font-size:90%;
-  text-align: inherit;
+div.bottomnav{
+    overflow: hidden;
+    background-color: #878787;
+    height: 80px;
 }
 div.footerkanan{
   position: absolute;
-  margin-left: 86%;
+  margin-left: 75%;
   margin-top: 1%;
+}
+div.headerBox1{
+  position: relative;
+  width: 100%;
+  height: 90px;
+  background: #DBDBDB;
+}
+img.headerBanyuwangi{
+  width: 100%;
+  height: 500px;
 }
 div.formcreate{
   position: relative;
   margin: 7% auto;
   height: 400px;
   width: 30%;
-  background: #50CCB3;
+  background:#ffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   border-radius: 19%;
+  opacity: 12px ;
   margin-top: -1%;
   padding-top:30px ;
 }
 input{
-margin-left: 5%;
-width: 65%;
+margin-left: 20%;
+width: 50%;
 border-radius: 5px;
+border-color: #50CCB3;
 }
 .post-btn{
   border-style: solid;
   border-radius: 10px;
   color: black;
   margin-top: 1%;
-  margin-left: -5%;
 }
 textarea{
-  margin-left: -8%;
+  margin-left: 20%;
   margin-top: -1%;
 }
 p.textarea{
-  margin-left: 15%;
+  margin-left: 12%;
   margin-top: -0.5%;
   font-family: sans-serif;
   color: black;
@@ -286,6 +379,11 @@ a.batal{
   font-style: italic;
   font-size: 70%;
 }
+input.post-btn{
+  background-color: #f9b282;
+  border-style: none;
+}
+
 @media screen (max width: 800px){
   div.headerBox{
 
