--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -22,20 +22,33 @@ img.background{
   margin-right: -1%;
 }
 
-img.headerKiri{
+#header-menu ul{
+  list-style-type: none;
+  padding:0px;
+  list-style-type: none;
+  background-color: rgba(0,0,0,0);
+  position: absolute;
+  margin-top: -54%;
+  margin-left: 45%;
+}
+#header-menu li{
+  float: right;
+  padding: 5px 30px;
+  font-size: 22px;
+  font-family: "Raleway1"
+}
+#header-menu ul li a{
+  display: block;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  padding: 15px;
+}
+#header-menu img{
   width: 23%;
   height : 13%;
   margin-top:-56%;
   margin-left: 1%;
-  position: absolute;
-}
-
-img.headerKanan{
-  float: right;
-  margin-top: -53%;
-  margin-left: 92%;
-  width: 5%;
-  height: 5%;
   position: absolute;
 }
 
