--- a/Index gambar dan css/style.css
+++ b/Index gambar dan css/style.css
@@ -18,6 +18,7 @@ body{
   margin-top: 0%;
   background: #DBDBDB;
   position: fixed;
+  box-shadow: 0px 0px 20px grey;
 }
 #header-menu ul{
   list-style-type: none;
@@ -30,7 +31,7 @@ body{
 }
 #header-menu li{
   float: right;
-  padding: 16px 50px;
+  padding: 17px 50px;
   font-size: 22px;
   font-family: "Raleway1"
 }
