--- a/Index gambar dan css/css.css
+++ b/Index gambar dan css/css.css
@@ -12,170 +12,29 @@ body{
   background: #FFFFFF;
   color: #777;
 }
-#header-menu{
+div.headerBox{
   width: 100%;
   height: 90px;
-  margin-top: 0%;
+  margin-top: none;
   background: #DBDBDB;
   position: fixed;
-  box-shadow: 0px 0px 20px grey;
 }
-#header-menu ul{
-  list-style-type: none;
-  padding:0px;
-  background-color: rgba(0,0,0,0);
-  position: absolute;
-  margin-top: 0%;
-  width: 100%;
-  height: 80px;
-}
-#header-menu li{
-  float: right;
-  padding: 17px 50px;
-  font-size: 22px;
-  font-family: "Raleway1"
-}
-#header-menu ul li a{
-  display: block;
-  color: black;
-  text-decoration: none;
-  text-align: center;
-  padding: 15px;
-}
-#header-menu img{
-  width: 23%;
-  height : 13%;
-  margin-top:0%;
-  margin-left: 1%;
-  position: fixed;
-}
-#header-menu li:hover {
-  background:white;
-  color: black;
-}
-
-h3.tentang{
-  font-family: "Raleway";
-  font-size: 350%;
-  color: black;
-  text-align: center;
-  margin-top: 9%;
-  position: absolute;
-  margin-left: 30%;
-}
-
-.profil-maya{
-  width: 500px;
-  height: 80px;
-  left: 200px;
-  float: left;
-  position: relative;
-  padding: 15px 15px 15px 2px;
-  margin-left: -10%;
-  background-color: #DBDBDB;
-  margin-top: 18%;
-}
-
-.profil-maya img{
-  margin-top: -2.5%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.profil-maya h4{
-  color: black;
-  font-family: "Raleway";
-  text-align: center;
-  font-size: 28px;
-  margin-top: -18%;
-  margin-left: 1%;
-}
-.profil-maya p{
-  color: black;
-  font-family: "Raleway1";
-  text-align: center;
-  font-size: 28px;
-  margin-top: -5%;
-  margin-left: -17%;
-}
-
-h3.tentang{
-  font-family: "Raleway";
-  font-size: 350%;
-  color: black;
-  text-align: center;
-  margin-top: 9%;
-  position: absolute;
-  margin-left: 30%;
-}
-
-.profil-fitria{
-  width: 500px;
-  height: 80px;
-  left: 200px;
-  float: left;
-  position: relative;
-  padding: 15px 15px 15px 2px;
-  margin-left: 15%;
-  background-color: #DBDBDB;
-  margin-top: 18%;
-}
-
-.profil-fitria img{
-  margin-top: -2.5%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.profil-fitria h4{
-  color: black;
-  font-family: "Raleway";
-  text-align: center;
-  font-size: 28px;
-  margin-top: -18%;
-  margin-left: -8%;
-}
-.profil-fitria p{
-  color: black;
-  font-family: "Raleway1";
-  text-align: center;
-  font-size: 28px;
-  margin-top: -5%;
-  margin-left: -17%;
-}
-
-.profil-dandy{
-  width: 500px;
-  height: 80px;
-  left: 200px;
-  float: left;
-  position: relative;
-  padding: 15px 15px 15px 2px;
-  margin-left: 15%;
-  background-color: #DBDBDB;
-  margin-top: 7%;
-}
-
-.profil-dandy img{
-  margin-top: -2.5%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.profil-dandy h4{
-  color: black;
-  font-family: "Raleway";
-  text-align: center;
-  font-size: 28px;
-  margin-top: -18%;
+img.headerKiri{
   margin-left: 5%;
+  width: 20%;
+  height: 60%;
+  margin-top: 1.5%;
+  margin-bottom:-3.5%;
 }
-.profil-dandy p{
-  color: black;
-  font-family: "Raleway1";
-  text-align: center;
-  font-size: 28px;
-  margin-top: -5%;
-  margin-left: -17%;
+img.headerKanan{
+  position: absolute;
+  width: 4%;
+  height: 40%;
+  float: right;
+  margin-left: 68%;
+  margin-top: 2%;
+  margin-right: 2%;
 }
-
 img.headerGambar{
   margin-top: 0%;
   width: 100%;
@@ -362,42 +221,6 @@ p.textsaran3baluran{
   font-size:1.5vw;
   text-indent: inherit;
 }
-p.textsaran1watudodol {
-  color: white;
-  font-family: "Raleway";
-  text-align:left;
-  float: left;
-  position: absolute;
-  width: 25%;
-  top: 250%;
-  left :5%;
-  font-size:1.5vw;
-  text-indent: inherit;
-}
-p.textsaran2watudodol{
-  color: white;
-  font-family: "Raleway";
-  text-align:left;
-  float: left;
-  position: absolute;
-  width: 25%;
-  top: 250%;
-  left :35%;
-  font-size:1.5vw;
-  text-indent: inherit;
-}
-p.textsaran3watudodol{
-  color: white;
-  font-family: "Raleway";
-  text-align:left;
-  float: left;
-  position: absolute;
-  width: 25%;
-  top: 250%;
-  left :65%;
-  font-size:1.5vw;
-  text-indent: inherit;
-}
 p.textsaran1 {
   color: white;
   font-family: "Raleway";
@@ -405,7 +228,7 @@ p.textsaran1 {
   float: left;
   position: absolute;
   width: 25%;
-  top: 220%;
+  top: 215%;
   left :5%;
   font-size:1.5vw;
   text-indent: inherit;
@@ -417,7 +240,7 @@ p.textsaran2{
   float: left;
   position: absolute;
   width: 25%;
-  top: 220%;
+  top: 215%;
   left :35%;
   font-size:1.5vw;
   text-indent: inherit;
@@ -429,7 +252,7 @@ p.textsaran3{
   float: left;
   position: absolute;
   width: 25%;
-  top: 220%;
+  top: 215%;
   left :65%;
   font-size:1.5vw;
   text-indent: inherit;
@@ -491,7 +314,6 @@ div.footertop{
   margin-top: 4%;
   height: 60px;
 }
-
 img.footer{
   width: 100%;
   height: 50px;
@@ -563,7 +385,7 @@ input.post-btn{
 }
 
 @media screen (max width: 800px){
-  #header-menu{
+  div.headerBox{
 
   }
 
